--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
             </div>
               <h3>Moderna</h3>
             </div>
+            <div class="btn">
+              <input type="button" value="Sumbit" class="btn-sumbit">
+            </div>
           </div>
         </div>
         <div class="img-enfermera">
