--- a/index.html
+++ b/index.html
@@ -87,16 +87,55 @@
         <div class="sponsors">
             <img src="./assets/sponsors.png" alt="sponsors" />
         </div>
-        <h1>Why should I vaccine?</h1>
-        <p>
-          In order to avoid any doubts about getting the COVID-19 vaccine,
-          identify the following 4 benefits of COVID-19 vaccination :
-        </p>
+        <div class="txt-answer">
+          <h1>Why should I vaccine?</h1>
+          <p>
+            In order to avoid any doubts about getting the COVID-19 vaccine,
+            identify the following 4 benefits of COVID-19 vaccination :
+          </p>
+        </div>
         <div class="targets">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+          <div class="small-card-4">
+            <div class="img-card">
+              <img src="./assets/icons/settings.png" alt="antibodies">
+            </div>
+            <h1>Minimize the
+              spread of viruses</h1>
+            <p>Veecine hos been proven
+              OtfectivO to prevent someone
+              from getting with
+              CoronaviruS</p>
+          </div>
+          <div class="small-card-4">
+            <div class="img-card">
+              <img src="./assets/icons/secure-blue.png" alt="antibodies">
+            </div>
+            <h1>Forming antibodies</h1>
+            <p>COVIO-19 vaccine proven to
+              help antibody
+              response for immune System</p>
+          </div>
+          <div class="small-card-4">
+            <div class="img-card">
+              <img src="./assets/icons/multiple-users-silhouette.png" alt="antibodies">
+            </div>
+            <h1>Protecting
+              people nearby</h1>
+            <p>The 01 COVID-19
+              vaccination ore the vaccine
+              that we get can also help
+              protect people around us</p>
+          </div>
+          <div class="small-card-4">
+            <div class="img-card">
+              <img src="./assets/icons/speech-bubble.png" alt="antibodies">
+            </div>
+            <h1>Creating group
+              immunity</h1>
+            <p>COVIO-19 vaccination is also
+              beneficial 'Or creating group
+              immunity or herd immunity.</p>
+          </div>
         </div>
       </div>
       <div class="preparations">
