--- a/index.html
+++ b/index.html
@@ -139,13 +139,71 @@
         </div>
       </div>
       <div class="preparations">
-        <h1>Preparations Before Vaccine</h1>
-        <p>
-          the success of vaccines is strongly influenced by the strength Of the
-          body's immune system. Therefore, there are several things that can be
-          tried to make the COVID-19 vaccine work :
-        </p>
-        <div class="targets-prep"></div>
+        <div class="img-prep">
+          <img src="./assets/vacune-women.png" alt=vac-women">
+        </div>
+        <div class="prep">
+          <h1>Preparations Before Vaccine</h1>
+          <p>
+            the success of vaccines is strongly influenced by the strength Of the
+            body's immune system. Therefore, there are several things that can be
+            tried to make the COVID-19 vaccine work :
+          </p>
+          <div class="targets-prep">
+            <div class="small-card-5">
+              <div class="img-card-2">
+                <img src="./assets/icons/secure-blue.png" alt="secure-blue">
+              </div>
+              <h1>Avoid alcoholic beverages</h1>
+              <div class="arrow-down img-card-2">
+                <img src="./assets/icons/arrow-down.png" alt="arrow-down">
+              </div>
+            </div>
+            <div class="open-card">
+              <div class="small-card-5" id="small-card-id">
+                <div class="img-card-2">
+                  <img src="./assets/icons/rejected.png" alt="secure-blue">
+                </div>
+                <h1>Avoid alcoholic beverages</h1>
+                <div class="arrow-down img-card-2">
+                  <img src="./assets/icons/arrow-down.png" alt="arrow-down">
+                </div>
+              </div>
+              <div class="txt-open-card">
+                <p>Strass has a profound offect on immuno work.
+                  Moreover, prolonged stress can incroaso cortisol
+                  production and oxidativo stress in tho body.</p>
+              </div>
+            </div>
+            <div class="small-card-5">
+              <div class="img-card-2">
+                <img src="./assets/icons/trend.png" alt="secure-blue">
+              </div>
+              <h1>Avoid alcoholic beverages</h1>
+              <div class="arrow-down img-card-2">
+                <img src="./assets/icons/arrow-down.png" alt="arrow-down">
+              </div>
+            </div>
+            <div class="small-card-5">
+              <div class="img-card-2">
+                <img src="./assets/icons/check.png" alt="secure-blue">
+              </div>
+              <h1>Avoid alcoholic beverages</h1>
+              <div class="arrow-down img-card-2">
+                <img src="./assets/icons/arrow-down.png" alt="arrow-down">
+              </div>
+            </div>
+            <div class="small-card-5">
+              <div class="img-card-2">
+                <img src="./assets/icons/heart.png" alt="secure-blue">
+              </div>
+              <h1>Avoid alcoholic beverages</h1>
+              <div class="arrow-down img-card-2">
+                <img src="./assets/icons/arrow-down.png" alt="arrow-down">
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="emergency">
         <h1>Emergency Contact</h1>
