--- a/index.html
+++ b/index.html
@@ -206,17 +206,90 @@
         </div>
       </div>
       <div class="emergency">
-        <h1>Emergency Contact</h1>
-        <p>
-          ontact one of the contacts below if you or your family feel nwell and
-          have similar symptoms such as Covid-19, make ure you also take care of
-          yourself before reporting to us :
-        </p>
-        <div class="targets">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+        <div class="txt-card-emg">
+          <h1>Emergency Contact</h1>
+          <p>
+            ontact one of the contacts below if you or your family feel nwell and
+            have similar symptoms such as Covid-19, make ure you also take care of
+            yourself before reporting to us :
+          </p>
+          <div class="targets-emg">
+            <div class="small-card-6">
+              <div class="container-top">
+                <div class="txt-small-card-emg">
+                  <div class="img-card-emg">
+                    <img src="./assets/icons/telephone-call.png" alt="call">
+                  </div>
+                  <div class="txt-emg">
+                    <h1>Call</h1>
+                    <p>
+                      021.123.145.14
+                    </p>
+                  </div>
+                </div>
+                <div class="btn-emg">
+                  <input type="button" value="CallNow" class="btn-call" id="btn-call-emg">
+                </div>
+              </div>
+            </div>
+            <div class="small-card-6">
+              <div class="container-top">
+                <div class="txt-small-card-emg">
+                  <div class="img-card-emg">
+                    <img src="./assets/icons/messenger.png" alt="Chat">
+                  </div>
+                  <div class="txt-emg">
+                    <h1>Chat</h1>
+                    <p>
+                      021.123.145.14
+                    </p>
+                  </div>
+                </div>
+                <div class="btn-emg">
+                  <input type="button" value="Chat Now" class="btn-call" id="btn-call-emg">
+                </div>
+              </div>
+            </div>
+            <div class="small-card-6">
+              <div class="container-top">
+                <div class="txt-small-card-emg">
+                  <div class="img-card-emg">
+                    <img src="./assets/icons/zoom.png" alt="zoom">
+                  </div>
+                  <div class="txt-emg">
+                    <h1>Video Call</h1>
+                    <p>
+                      021.123.145.14
+                    </p>
+                  </div>
+                </div>
+                <div class="btn-emg">
+                  <input type="button" value="Video Call Now" class="btn-call" id="btn-call-emg">
+                </div>
+              </div>
+            </div>
+            <div class="small-card-6">
+              <div class="container-top">
+                <div class="txt-small-card-emg">
+                  <div class="img-card-emg">
+                    <img src="./assets/icons/email.png" alt="email">
+                  </div>
+                  <div class="txt-emg">
+                    <h1>Message</h1>
+                    <p>
+                      021.123.145.14
+                    </p>
+                  </div>
+                </div>
+                <div class="btn-emg">
+                  <input type="button" value="Message Now" class="btn-call" id="btn-call-emg">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="img-doc">
+          <img src="./assets/doctor.png" alt="doctor">
         </div>
       </div>
     </section>
