Pagina Principal completada

--- a/index.html
+++ b/index.html
@@ -294,14 +294,48 @@
       </div>
     </section>
     <footer>
-      <h1>Vaccination</h1>
-      <table>
-        <tr>
-          <th>About</th>
-          <th>Company</th>
-          <th>Support</th>
-        </tr>
-      </table>
+      <div class="footer-space">
+        <div class="txt-vaccination">
+          <h1>Vaccination</h1>
+          <p>Our goal is to help the
+            world free from the
+            ongoing FXtndemic
+          </p>
+        </div>
+        <div class="txt-info">
+            <table>
+              <tr>
+                <th>About</th>
+                <th>Company</th>
+                <th>Support</th>
+              </tr>
+              <tr>
+                <td>About Us</td>
+                <td>How We Work?</td>
+                <td>FAQs</td>
+              </tr>
+              <tr>
+                <td>Features</td>
+                <td>Capital</td>
+                <td>Support Center</td>
+              </tr>
+              <tr>
+                <td>News & Blog</td>
+                <td>Security</td>
+                <td>Contact Us</td>
+              </tr>
+            </table>
+        </div>
+      </div>
+      <div class="footer-botom">
+        <ul>
+          <li>@2021 Vacinnation. All rights reserved</li>
+          <div class="terms">
+            <li>Terms & Agreements</li>
+            <li>Privocy Policy</li>
+          </div>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
